Install husky package to deal with pre-commit hook for execute ESLint, Stylelint & Prettier after commit; post-commit hook to deploy plugin to folder on wordpress/wp-content/plugins/Wordpress-assessment after commit finish with success and deploy the project on wordpress test environment.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"start": "wp-scripts start",
+		"prepare": "husky"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^30.10.0"
+		"@wordpress/scripts": "^30.10.0",
+		"husky": "^9.1.7"
 	}
 }
