--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start",
-		"prepare": "husky"
+		"prepare": "husky install"
 	},
+	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
+		"@wordpress/eslint-plugin": "^22.3.0",
+		"@wordpress/prettier-config": "^4.17.0",
 		"@wordpress/scripts": "^30.10.0",
-		"husky": "^9.1.7"
+		"eslint-config-prettier": "^10.0.1",
+		"husky": "^9.1.7",
+		"prettier": "^3.4.2"
 	}
 }
