--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 	},
 	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
+		"@wordpress/block-editor": "^14.12.0",
 		"@wordpress/eslint-plugin": "^22.3.0",
+		"@wordpress/i18n": "^5.17.0",
 		"@wordpress/prettier-config": "^4.17.0",
 		"@wordpress/scripts": "^30.10.0",
 		"eslint-config-prettier": "^10.0.1",
