--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,14 @@
 {
-    "extends": [ "plugin:@wordpress/eslint-plugin/recommended", "prettier" ]
+    "extends": [
+        "plugin:@wordpress/eslint-plugin/recommended",
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine": "auto"
+            }
+        ]
+    }
 }
