--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-	"name": "wordpress-assessment",
+	"name": "otavio-serra-plugin",
 	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"description": "WordPress Plugin Development Challenge - The Company requires a form on the website that allows the developers to submit their information to be interviewed for a development position.",
+	"author": "Otávio Campos de Abreu Serra",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build",
-		"format": "wp-scripts format",
+		"format": "wp-scripts format ./src",
+		"deploy": "wp-scripts format && bash ./.scripts/build.after.sh",
 		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
+		"lint:js": "wp-scripts format ./src && wp-scripts lint-js ./src",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start",
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
