--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,13 @@
             "error",
             {
                 "endOfLine": "auto"
+            },
+            {
+                "printWidth": 120
             }
         ]
+    },
+    "globals": {
+        "waOtavioSerraPlugin": "readonly"
     }
 }
