--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@wordpress/scripts": "^30.10.0",
 		"eslint-config-prettier": "^10.0.1",
 		"husky": "^9.1.7",
-		"prettier": "^3.4.2"
+		"prettier": "^3.4.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	}
 }
