--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "wp-scripts build",
 		"start": "wp-scripts start",
 		"format": "wp-scripts format './src/**/*.{js,jsx,css,scss}' './pages/**/*.{js,jsx,css,scss}'",
-		"deploy": "wp-scripts format && bash ./.scripts/build.after.sh",
+		"deploy": "wp-scripts format './pages/**/*.{js,jsx,css,scss}' && bash ./.scripts/build.after.sh",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts format ./src && wp-scripts lint-js ./src",
 		"packages-update": "wp-scripts packages-update",
