Get language and framework data from the database using the REST API route and controller to compute it

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "prettier"
     ],
     "rules": {
+        "no-console": "off",
         "prettier/prettier": [
             "error",
             {
@@ -15,6 +16,7 @@
         ]
     },
     "globals": {
-        "waOtavioSerraPlugin": "readonly"
+        "waOtavioSerraPlugin": "readonly",
+        "wpApiSettings": "readonly"
     }
 }
