--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
+		"@wordpress/api-fetch": "^7.17.0",
 		"@wordpress/block-editor": "^14.12.0",
 		"@wordpress/eslint-plugin": "^22.3.0",
 		"@wordpress/i18n": "^5.17.0",
