--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@wordpress/eslint-plugin": "^22.3.0",
 		"@wordpress/i18n": "^5.17.0",
 		"@wordpress/prettier-config": "^4.17.0",
-		"@wordpress/scripts": "26.10.0",
+		"@wordpress/scripts": "^30.10.0",
 		"eslint-config-prettier": "^10.0.1",
 		"husky": "^9.1.7",
 		"prettier": "^3.4.2",
