--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "otavio-serra-plugin",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"description": "WordPress Plugin Development Challenge - The Company requires a form on the website that allows the developers to submit their information to be interviewed for a development position.",
 	"author": "Otávio Campos de Abreu Serra",
 	"license": "GPL-2.0-or-later",
@@ -14,10 +14,14 @@
 		"lint:js": "wp-scripts format ./src && wp-scripts lint-js ./src",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"prepare": "husky"
+		"prepare": "husky",
+		"test": "wp-scripts test-unit-js",
+		"test:watch": "wp-scripts test-unit-js --watch"
 	},
 	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
 		"@wordpress/api-fetch": "^7.17.0",
 		"@wordpress/block-editor": "^14.12.0",
 		"@wordpress/eslint-plugin": "^22.3.0",
